--- a/conf_apps/tmux/tmuxrc.conf
+++ b/conf_apps/tmux/tmuxrc.conf
@@ -34,7 +34,7 @@ bind-key x kill-window
 bind-key M command-prompt -I "#S" "rename-session '%%'"
 bind-key X kill-session -a
 bind-key z detach-client
-bind-key n new-session
+bind-key N new-session
 bind-key -r / switch-client -n
 bind-key -r \' switch-client -p
 
