Update tmux config

--- a/appconfig/tmuxrc.conf
+++ b/appconfig/tmuxrc.conf
@@ -26,17 +26,17 @@ bind-key m command-prompt -I "#W" "rename-window '%%'"
 bind-key t new-window
 bind-key T break-pane
 bind-key b choose-tree
-bind-key -r , select-window -p
-bind-key -r . select-window -n
-bind-key x kill-window
+bind-key -r H select-window -p
+bind-key -r L select-window -n
+bind-key Q kill-window
 
 # Sessions
 bind-key M command-prompt -I "#S" "rename-session '%%'"
-bind-key X kill-session -a
+bind-key X kill-session
 bind-key z detach-client
 bind-key N new-session
-bind-key -r / switch-client -n
-bind-key -r \' switch-client -p
+bind-key -r J switch-client -n
+bind-key -r K switch-client -p
 
 # Quality of life
 set-option -g mode-keys vi
@@ -73,5 +73,5 @@ set-option -g window-status-current-style fg=white,bg=black
 #set -g default-shell /bin/sh
 
 # Debug
-bind F5 source ~/.tmux.conf\; display "tmux config sourced"
-bind F6 neww -n "tmux-config" "\${EDITOR:-vim} ~/.tmux.conf"
+#bind F5 source ~/.tmux.conf\; display "tmux config sourced"
+#bind F6 neww -n "tmux-config" "\${EDITOR:-vim} ~/.tmux.conf"
