Update TotalCommander config

--- a/appconfig/totalcmd/WINCMD.INI
+++ b/appconfig/totalcmd/WINCMD.INI
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=2111
+firstmnu=2047
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=1
 PanelsVertical=0
-test=211
+test=46
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -53,7 +53,7 @@ Win95Delete=0
 UseTrash=1
 WatchDirs=9
 InstallDir=c:\totalcmd
-lastmd5=2
+lastmd5=3
 CrcSeparateFiles=0
 CrcSeparateFolders=0
 CompareCaseSensitive=0
@@ -173,10 +173,10 @@ CustColumnDX=657
 CustColumnDY=400
 CustColumnMax=0
 Tabstops=352,367,442,-1,969,100
-ConnectX=662
-ConnectY=260
-ConnectDX=485
-ConnectDY=400
+ConnectX=3228
+ConnectY=329
+ConnectDX=606
+ConnectDY=500
 ConnectMax=0
 SearchX=689
 SearchY=408
@@ -217,7 +217,7 @@ x=960
 y=0
 dx=960
 dy=1040
-Wrap=0
+Wrap=1
 [Packer]
 InternalZip=1
 InternalUnzip=1
@@ -261,16 +261,6 @@ Contents1=[=tc.path]
 Options1=-1|1|96
 AutoLoad=1
 Titles=Show Full Path
-[user]
-[DirMenu]
-menu1=Home
-cmd1=cd %USERPROFILE%\
-menu2=Desktop
-cmd2=cd %USERPROFILE%\Desktop\
-menu3=Documents
-cmd3=cd %USERPROFILE%\Documents\
-menu4=Downloads
-cmd4=cd C:\Users\fdeng5\Downloads
 [HintsCustomField]
 [Shortcuts]
 S+OEM_US;:=cm_FocusCmdLine
@@ -283,7 +273,6 @@ Y=cm_Copy
 P=cm_CopyNetNamesToClip
 /=cm_ShowQuickSearch
 A=cm_EditNewFile
-E=cm_List
 LEFT=cm_GoToParent
 RIGHT=cm_GoToDir
 H=cm_GoToParent
@@ -291,8 +280,6 @@ L=cm_GoToDir
 O=cm_Edit
 S+O=cm_Return
 S+P=cm_CopyNamesToClip
-T=cm_OpenNewTab
-S+T=cm_OpenDirInNewTabOther
 Q=cm_CloseCurrentTab
 G=cm_DirectoryHotlist
 S+G=cm_DirectoryHistory
@@ -308,6 +295,9 @@ S+D=cm_Delete
 F=cm_ShowQuickSearch
 S+A=cm_MkDir
 B=cm_ContextMenu
+S+W=cm_List
+N=cm_OpenNewTab
+S+N=cm_OpenDirInNewTabOther
 [Associations]
 [Confirmation]
 deleteDirs=1
@@ -368,3 +358,22 @@ RedirectSection=%APPDATA%\GHISLER\data\plugins.ini
 RedirectSection=%APPDATA%\GHISLER\themes\mycmder.ini
 [ColorsDark]
 RedirectSection=%APPDATA%\GHISLER\themes\mycmder.ini
+[user]
+menu1=Edit in NeoVim
+cmd1=nvim-qt
+param1=%n
+[DirMenu]
+menu1=Home
+cmd1=cd %USERPROFILE%\
+menu2=Desktop
+cmd2=cd %USERPROFILE%\Desktop\
+menu3=Documents
+cmd3=cd %USERPROFILE%\Documents\
+menu4=Downloads
+cmd4=cd C:\Users\fdeng5\Downloads
+menu5=ecg_base_bin
+cmd5=cd \\\Secure FTP\ECG\base\bin
+menu6=cpm_db
+cmd6=cd \\\Secure FTP\ECG\data\config\cpm
+menu7=cpm_data
+cmd7=cd \\\Secure FTP\ECG\data\tmp\cpm
