Update totalcmd config

--- a/appconfig/totalcmd/WINCMD.INI
+++ b/appconfig/totalcmd/WINCMD.INI
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=2047
+firstmnu=1087
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=1
 PanelsVertical=0
-test=46
+test=66
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -53,7 +53,7 @@ Win95Delete=0
 UseTrash=1
 WatchDirs=9
 InstallDir=c:\totalcmd
-lastmd5=3
+lastmd5=2
 CrcSeparateFiles=0
 CrcSeparateFolders=0
 CompareCaseSensitive=0
@@ -199,6 +199,14 @@ MenuChangeY=256
 MenuChangeDX=800
 MenuChangeDY=500
 MenuChangeMax=0
+maximized=1
+x=272
+y=31
+dx=1375
+dy=980
+Divider=500
+DividerQuickView=500
+DividerComments=500
 [Lister]
 textwidth=81
 binwidth=75
@@ -217,7 +225,7 @@ x=960
 y=0
 dx=960
 dy=1040
-Wrap=1
+Wrap=0
 [Packer]
 InternalZip=1
 InternalUnzip=1
@@ -296,8 +304,8 @@ F=cm_ShowQuickSearch
 S+A=cm_MkDir
 B=cm_ContextMenu
 S+W=cm_List
-N=cm_OpenNewTab
-S+N=cm_OpenDirInNewTabOther
+T=cm_OpenNewTab
+S+T=cm_OpenDirInNewTabOther
 [Associations]
 [Confirmation]
 deleteDirs=1
