Remove template files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Ignore local saved files
+# Project files
 **/.save/*
-.vscode
+.vscode/
+.vim/
 
-# Vim
-# Plugin dir
+# Vim plugin directories
 plugged/
 vim-plugged/
 vim-plug/
@@ -11,30 +11,10 @@ vim_plugged/
 vim_plug/
 coc-extensions/
 coc_extensions/
-# Netrw garbage
-.netrwhist
+
 # Session files
 saved_sessions/
-# Local temp configuration
-init.vim
-ginit.vim
-.vimrc
-.gvimrc
-_vimrc
-_gvimrc
-coc-settings.json
 
-# Bash
-init.sh
-init
-profile.sh
-bashrc.sh
-.bashrc
+# Temp files
 .bash_history
-.bash_profile
-.profile
-
-# Pwsh
-profile.ps1
-Microsoft.PowerShell_profile.ps1
-init.ps1
+.netrwhist
