--- a/appconfig/vscode/settings.json
+++ b/appconfig/vscode/settings.json
@@ -2,8 +2,6 @@
     "window.zoomLevel": 0,
     "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
     "window.restoreWindows": "none",
-
-    "workbench.colorTheme": "Dracula",
     "workbench.startupEditor": "none",
     "workbench.enableExperiments": false,
     "workbench.tree.renderIndentGuides": "always",
@@ -11,9 +9,9 @@
     "workbench.editor.openPositioning": "last",
     "workbench.settings.useSplitJSON": true,
     "workbench.editor.tabSizing": "shrink",
+    "workbench.colorTheme": "Eva Dark",
     "workbench.iconTheme": "vscode-icons",
     "workbench.sideBar.location": "left",
-
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.detectIndentation": true,
@@ -26,38 +24,32 @@
     "editor.showFoldingControls": "always",
     "editor.renderControlCharacters": true,
     "editor.fontLigatures": true,
-
     "files.insertFinalNewline": true,
     "files.simpleDialog.enable": true,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
     "files.eol": "\n",
-
     "explorer.autoReveal": false,
     "explorer.confirmDragAndDrop": false,
-
     "terminal.integrated.cursorBlinking": true,
     "terminal.integrated.enableBell": true,
     "terminal.integrated.shell.windows": "pwsh.exe",
-
     "extensions.autoCheckUpdates": false,
     "extensions.ignoreRecommendations": true,
+    "extensions.showRecommendationsOnlyOnDemand": true,
     "extensions.autoUpdate": false,
-
     "breadcrumbs.enabled": true,
     "git.ignoreMissingGitWarning": true,
     "debug.openExplorerOnEnd": true,
-
     "update.mode": "manual",
     "update.enableWindowsBackgroundUpdates": false,
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
-
-    "csharp.referencesCodeLens.enabled": false,
     "powershell.integratedConsole.showOnStartup": false,
-    "powershell.powerShellAdditionalExePaths": [
-        { "versionName": "pwsh7", "exePath": "pwsh.exe" }
-    ],
-    "powershell.powerShellDefaultVersion": "pwsh7",
+    "powershell.powerShellDefaultVersion": "pwsh.exe",
+    "powershell.startAsLoginShell.linux": true,
     "powershell.pester.useLegacyCodeLens": false,
+    "vscode-neovim.neovimExecutablePaths.win32": "nvim",
+    "vscode-neovim.neovimInitVimPaths.linux": "nvim",
+    "vscode-neovim.neovimInitVimPaths.darwin": "nvim",
 }
