Update vscode config

--- a/appconfig/vscode/settings.json
+++ b/appconfig/vscode/settings.json
@@ -1,55 +1,92 @@
 {
-    "window.zoomLevel": 0,
-    "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
-    "window.restoreWindows": "none",
-    "workbench.startupEditor": "none",
-    "workbench.enableExperiments": false,
-    "workbench.tree.renderIndentGuides": "always",
-    "workbench.editor.highlightModifiedTabs": true,
-    "workbench.editor.openPositioning": "last",
-    "workbench.settings.useSplitJSON": true,
-    "workbench.editor.tabSizing": "shrink",
-    "workbench.colorTheme": "Eva Dark",
-    "workbench.iconTheme": "vscode-icons",
-    "workbench.sideBar.location": "left",
-    "editor.tabSize": 4,
-    "editor.insertSpaces": true,
+    "breadcrumbs.filePath": "last",
+    "debug.inlineValues": true,
+    "debug.internalConsoleOptions": "neverOpen",
+    "debug.openDebug": "neverOpen",
+    "debug.showBreakpointsInOverviewRuler": true,
+    "debug.showSubSessionsInToolBar": true,
+    "diffEditor.ignoreTrimWhitespace": false,
+    "editor.accessibilitySupport": "off",
+    "editor.codeLens": false,
+    "editor.cursorBlinking": "smooth",
+    "editor.cursorSmoothCaretAnimation": true,
+    "editor.cursorWidth": 2,
     "editor.detectIndentation": true,
-    "editor.rulers": [
-        80,
-        120
-    ],
     "editor.fontFamily": "Cascadia Code PL, Sarasa Term CL, Consolas, 'Courier New', monospace",
-    "editor.cursorStyle": "block",
-    "editor.showFoldingControls": "always",
-    "editor.renderControlCharacters": true,
     "editor.fontLigatures": true,
+    "editor.fontWeight": 100,
+    "editor.insertSpaces": true,
+    "editor.lineNumbers": "relative",
+    "editor.minimap.enabled": false,
+    "editor.minimap.maxColumn": 60,
+    "editor.minimap.renderCharacters": false,
+    "editor.mouseWheelZoom": true,
+    "editor.quickSuggestions": true,
+    "editor.renderControlCharacters": true,
+    "editor.renderLineHighlight": "all",
+    "editor.renderWhitespace": "trailing",
+    "editor.rulers": [80, 120],
+    "editor.showFoldingControls": "always",
+    "editor.smoothScrolling": true,
+    "editor.suggest.localityBonus": true,
+    "editor.suggest.shareSuggestSelections": true,
+    "editor.suggest.showStatusBar": true,
+    "editor.tabSize": 4,
+    "editor.trimAutoWhitespace": false,
+    "editor.unfoldOnClickAfterEndOfLine": true,
+    "explorer.autoReveal": false,
+    "explorer.confirmDragAndDrop": false,
+    "explorer.openEditors.visible": 10,
+    "extensions.autoCheckUpdates": false,
+    "extensions.autoUpdate": false,
+    "extensions.ignoreRecommendations": true,
+    "files.eol": "\n",
     "files.insertFinalNewline": true,
     "files.simpleDialog.enable": true,
     "files.trimFinalNewlines": true,
-    "files.trimTrailingWhitespace": true,
-    "files.eol": "\n",
-    "explorer.autoReveal": false,
-    "explorer.confirmDragAndDrop": false,
-    "terminal.integrated.cursorBlinking": true,
-    "terminal.integrated.enableBell": true,
-    "terminal.integrated.shell.windows": "pwsh.exe",
-    "extensions.autoCheckUpdates": false,
-    "extensions.ignoreRecommendations": true,
-    "extensions.showRecommendationsOnlyOnDemand": true,
-    "extensions.autoUpdate": false,
-    "breadcrumbs.enabled": true,
     "git.ignoreMissingGitWarning": true,
-    "debug.openExplorerOnEnd": true,
-    "update.mode": "manual",
-    "update.enableWindowsBackgroundUpdates": false,
+    "powershell.integratedConsole.showOnStartup": false,
+    "powershell.pester.useLegacyCodeLens": false,
+    "powershell.powerShellDefaultVersion": "pwsh.exe",
+    "powershell.promptToUpdatePowerShell": false,
+    "powershell.startAsLoginShell.linux": true,
+    "problems.showCurrentInStatus": true,
+    "scm.autoReveal": false,
+    "search.experimental.searchInOpenEditors": true,
+    "search.showLineNumbers": true,
+    "search.smartCase": true,
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
-    "powershell.integratedConsole.showOnStartup": false,
-    "powershell.powerShellDefaultVersion": "pwsh.exe",
-    "powershell.startAsLoginShell.linux": true,
-    "powershell.pester.useLegacyCodeLens": false,
+    "terminal.integrated.copyOnSelection": true,
+    "terminal.integrated.rendererType": "canvas",
+    "terminal.integrated.rightClickBehavior": "default",
+    "terminal.integrated.sendKeybindingsToShell": true,
+    "terminal.integrated.shell.windows": "pwsh.exe",
+    "update.enableWindowsBackgroundUpdates": false,
+    "update.mode": "manual",
     "vscode-neovim.neovimExecutablePaths.win32": "nvim",
-    "vscode-neovim.neovimInitVimPaths.linux": "nvim",
     "vscode-neovim.neovimInitVimPaths.darwin": "nvim",
+    "vscode-neovim.neovimInitVimPaths.linux": "nvim",
+    "window.menuBarVisibility": "toggle",
+    "window.restoreWindows": "none",
+    "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
+    "window.zoomLevel": 0,
+    "workbench.colorTheme": "Dracula Soft",
+    "workbench.editor.enablePreviewFromCodeNavigation": true,
+    "workbench.editor.enablePreviewFromQuickOpen": true,
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editor.pinnedTabSizing": "compact",
+    "workbench.editor.splitSizing": "split",
+    "workbench.editor.tabSizing": "shrink",
+    "workbench.enableExperiments": false,
+    "workbench.list.smoothScrolling": true,
+    "workbench.settings.openDefaultKeybindings": true,
+    "workbench.settings.openDefaultSettings": true,
+    "workbench.settings.settingsSearchTocBehavior": "hide",
+    "workbench.settings.useSplitJSON": true,
+    "workbench.sideBar.location": "left",
+    "workbench.tree.renderIndentGuides": "always",
+    "zenMode.fullScreen": false,
+    "zenMode.hideLineNumbers": false,
+    "zenMode.hideStatusBar": false
 }
