Update vscode config

--- a/appconfig/vscode/settings.json
+++ b/appconfig/vscode/settings.json
@@ -5,9 +5,9 @@
     "debug.openDebug": "neverOpen",
     "debug.showBreakpointsInOverviewRuler": true,
     "debug.showSubSessionsInToolBar": true,
+    "diffEditor.codeLens": true,
     "diffEditor.ignoreTrimWhitespace": false,
     "editor.accessibilitySupport": "off",
-    "editor.codeLens": false,
     "editor.cursorBlinking": "smooth",
     "editor.cursorSmoothCaretAnimation": true,
     "editor.cursorWidth": 2,
@@ -77,6 +77,7 @@
     "workbench.editor.enablePreviewFromQuickOpen": true,
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.editor.pinnedTabSizing": "compact",
+    "workbench.editor.restoreViewState": false,
     "workbench.editor.splitSizing": "split",
     "workbench.editor.tabSizing": "shrink",
     "workbench.enableExperiments": false,
