Update Vim VSCode support

--- a/appconfig/vscode/settings.json
+++ b/appconfig/vscode/settings.json
@@ -67,9 +67,11 @@
     "terminal.integrated.shellArgs.windows": "-NoLogo",
     "update.enableWindowsBackgroundUpdates": false,
     "update.mode": "manual",
+    "vscode-neovim.mouseSelectionStartVisualMode": true,
+    "vscode-neovim.neovimExecutablePaths.darwin": "nvim",
+    "vscode-neovim.neovimExecutablePaths.linux": "nvim",
     "vscode-neovim.neovimExecutablePaths.win32": "nvim",
-    "vscode-neovim.neovimInitVimPaths.darwin": "nvim",
-    "vscode-neovim.neovimInitVimPaths.linux": "nvim",
+    "vscode-neovim.revealCursorScrollLine": true,
     "window.restoreWindows": "none",
     "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
     "workbench.colorTheme": "Dracula Soft",
