Move VSCode config to the root

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@ data/
 userdata/
 user/
 
+# VSCode
+rivscode/*
+!rivscode/keybindings.json
+!rivscode/settings.json
+!rivscode/export_extensions.ps1
+
 # Session files
 saved_sessions/
 
